apply plugin: 'scala'
//apply plugin: 'idea'

sourceCompatibility = 1.6
targetCompatibility = 1.6

version = '1.0'

repositories {
    mavenCentral()
    maven {
        url "https://oss.sonatype.org/content/repositories/snapshots/"
    }
}

ext {
    scalaVersion = '2.10'
    scalaVersionRevision = '3'
    specs2Version = '1.14'
    junitVersion = '4.11'
}

configurations {
    scalaLibrary
    scalaCompiler
}

dependencies {
    scalaLibrary "org.scala-lang:scala-library:$scalaVersion.$scalaVersionRevision"
    scalaCompiler "org.scala-lang:scala-compiler:$scalaVersion.$scalaVersionRevision"

    compile "org.scala-lang:scala-library:$scalaVersion.$scalaVersionRevision"
    testCompile("junit:junit:${junitVersion}")
    testCompile("org.mockito:mockito-core:1.9.5")
    testCompile "org.specs2:specs2_$scalaVersion:$specs2Version"
}

[compileJava, compileTestJava]*.options.collect { options -> options.encoding = 'UTF-8' }

jar {
    manifest {
        attributes( "Main-Class": "com.inkenkun.x1.scala.async.App" )
    }
}

tasks.withType(ScalaCompile) {
    scalaCompileOptions.useCompileDaemon = false
    scalaCompileOptions.useAnt = false

    configure(scalaCompileOptions.forkOptions) {
        memoryMaximumSize = '1g'
        jvmArgs = ['-XX:MaxPermSize=512m']
    }
}
